# insight-pilot

./: .gitignore  LICENSE
backend/: .env.example  alembic.ini  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 9d2d188a442e_add_user.py  f451f85c8d58_add_user.py
backend/app/: main.py
backend/app/api/: auth.py  docs.py  knowledge.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: auth.py  docs.py  knowledge.py
backend/app/llm/: model_client.py
backend/app/middleware/: exception_middleware.py  logger_middleware.py
backend/app/models/: __init__.py  auth.py  base.py  knowledge.py
backend/app/schemas/: auth.py  knowledge.py
backend/app/services/rag/: document_processing_service.py
backend/app/utils/: file_utils.py  metadata_enricher.py
backend/app/vector_store/: text_vector_store.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: components.d.ts  main.js
frontend/src/components/: cookie.js  utils.js
frontend/src/router/: index.js
frontend/src/services/: auth.js  docs.js  knowledge.js
frontend/src/views/: Admin.vue  Index.vue
frontend/src/views/auth/: LoginView.vue  RegisterView.vue
frontend/src/views/components/: FFooter.vue  FHeader.vue
frontend/src/views/knowlwdge/: ChunkManager.vue  CreateKnowledge.vue  DocsManager.vue  KnowledgeManager.vue
